<?php

namespace App\Models;
use Illuminate\Database\Eloquent\Model;
use Illuminate\Database\Eloquent\Concerns\HasUuids;

class ProductVariant extends Model {
    use HasUuids;
    protected $fillable = ['product_id', 'variant_name', 'sku', 'price', 'stock'];
    public function product() { return $this->belongsTo(Product::class); }
}