<?php

namespace App\Models;
use Illuminate\Database\Eloquent\Model;
use Illuminate\Database\Eloquent\Concerns\HasUuids;

class Rating extends Model {
    use HasUuids;
    protected $fillable = ['user_id', 'targetRole', 'targetId', 'rating'];
    public function user() { return $this->belongsTo(User::class); }
}