<?php

namespace App\Models;
use Illuminate\Database\Eloquent\Model;
use Illuminate\Database\Eloquent\Concerns\HasUuids;

class ShippingEmp extends Model {
    use HasUuids;
    protected $fillable = ['user_id', 'pdp', 'phone', 'address', 'cin', 'rib'];
    public function user() { return $this->belongsTo(User::class); }
}