@startuml

enum UserRole {
CLIENT
INFLUENCER
STORE
ADMIN
SHIPPING_COMPANY
SHIPPING_EMP
}
enum ProductCondition {
NEW
GOOD
USED
}
enum OrderStatus {
PENDING
CONFIRMED
SHIPPED
DELIVERED
CANCELLED
}
enum PaymentStatus {
UNPAID
PENDING
PAID
}
enum FactureType {
STORE
INFLUENCER
ADMIN
SHIPPING
SHIPPING_EMP
}
enum NotificationTarget {
CLIENT
INFLUENCER
STORE
SHIPPING_COMPANY
SHIPPING_EMP
USER
}
' =========================
' CORE USER
' =========================
class User {
+id : uuid
name : string
family_name : string
email : string
password : string
role : UserRole
isBlocked : boolean
createdAt : datetime
}
class Client {
+id : uuid
address: string
city : string 
codePostal : string 
lon : float
lat : string
}
class Influencer {
+id : uuid
referralCode : string
commissionRate : float <<5%>>
profilePicture : string
phone : string
address : string
city : string
codePostal : string
cin : string
rib : string
d17 : string
isActive : boolean
slug : string
}
class Store {
+id : uuid
name_fr : string
name_ar : string
name_en : string
description_fr : text
description_ar : text
description_en : text
storePhone : string
address : string
responsibleCin : string
matriculeFiscale : string
logo : string
cover ; string
rib : string
isActive : boolean
categories : json <<store-selected categories>>
slug : string
promo : decimal
}
class Admin {
+id : uuid
platformCommissionAdmin : float <<10%>>
platformCommissionShare : float <<5%>>
}
' =========================
' CATEGORY
' =========================
class Category {
+id : uuid
pranet_id: uuid
name_fr : string
name_ar : string
name_en : string
slug : string
icon : string
logo : string
cover : string
isActive : boolean
}
' =========================
' PRODUCT
' =========================
class Product {
+id : uuid
name_fr : string
name_ar : string
name_en ; string
description_fr : text
description_ar : text
description_en : text
price : decimal
condition : ProductCondition
stock : int
slug : string
promo : decimal
categories : json
}

class ProductAlbum {
+id : uuid
imageUrl : string
isPrimary : boolean
}

class ProductVariant {
    + id : uuid
    + product_id : uuid
    + variant_name : string // e.g., "Color: Red | Size: Large"
    + sku : string
    + stock : int
}

' =========================
' ORDER
' =========================
class Order {
+id : uuid
status : OrderStatus
totalAmount : decimal
createdAt : datetime
}
class OrderItem {
+id : uuid
varient_id : uuid
product_id : uuid
quantity : int
price : decimal
}

' =========================
' SHIPPING
' =========================
class ShippingCompany {
+id : uuid
contactInfo : string
rib : string
name:string
responsiblePhone : string
companyPhone : string
address : string
cin : string
matriculeFiscale : string
createdAt : datetime
}
class ShippingEmp {
+id : uuid
pdp : string
rib : string
Phone : string
address : string
cin : string
createdAt : datetime
}

class Facture {
+id : uuid
order_id : uuid
factureNumber : string
type : FactureType
amount : decimal
status : PaymentStatus
createdAt : datetime
}

class Log {
+id : uuid
userId : uuid
userRole : UserRole
description : text
title : string
status : 0 1 
createdAt : datetime
}
' =========================
' NOTIFICATIONS
' =========================
class Notification {
+id : uuid
targetType : NotificationTarget
targetId : uuid
title : string
message : text
isSeen: boolean
createdAt : datetime
}
' =========================
' REPORTS
' =========================
class Report {
+id : uuid
reporterId : uuid
reportedTargetId : uuid
reportedTargetRole : userRole
description : text
status : string <<PENDING | RESOLVED>>
createdAt : datetime
}
class BlockList {
+id : uuid
reporterId : uuid
reportedTargetId : uuid
reportedTargetRole : userRole
createdAt : datetime
}
' =========================
' COMMENTS & RATINGS
' =========================
class Comment {
+id : uuid
userId : uuid
targetRole : userRole 
targetId : uuid
content : text
createdAt : datetime
}
class Rating {
+id : uuid
userId : uuid
targetRole : userRole
targetId : uuid
rating : int <<1..5>>
createdAt : datetime
}
' =========================
' RELATIONSHIPS
' =========================
User "1" -- "0..1" Client
User "1" -- "0..1" Influencer
User "1" -- "0..1" Store
User "1" -- "0..1" Admin
User "1" -- "0..1" ShippingCompany
User "1" -- "0..1" ShippingEmp

' Product Structure
Store "1" *-- "0..*" Product
Product "1" *-- "0..*" ProductVariant
Product "1" *-- "0..*" ProductAlbum
Product "0..*" -- "0..*" Category

' Order Flow
Client "1" -- "0..*" Order
Order "1" *-- "0..*" OrderItem
OrderItem "0..*" -- "1" ProductVariant
Influencer "1" -- "0..*" Order : "referred by"

' Financials & Communication
Order "1" -- "0..*" Facture
User "1" -- "0..*" Notification
User "1" -- "0..*" Log

' Feedback & Safety
User "1" -- "0..*" Comment
Product "1" -- "0..*" Comment
User "1" -- "0..*" Rating
Product "1" -- "0..*" Rating
User "1" -- "0..*" Report
@enduml


